--- a/config_template/config_template_no_groups_tun_VN.json
+++ b/config_template/config_template_no_groups_tun_VN.json
@@ -1,7 +1,8 @@
 {
   "log": {
     "level": "debug",
-    "timestamp": true
+    "timestamp": true,
+    "output": "sing-box.log"
   },
   "experimental": {
     "clash_api": {
@@ -26,7 +27,7 @@
       },
       {
         "tag": "localDns",
-        "address": "https://223.5.5.5/dns-query",
+        "address": "https://1.12.12.12/dns-query",
         "detour": "direct"
       }
     ],
@@ -55,7 +56,7 @@
       ],
       "mtu": 9000,
       "auto_route": true,
-      "strict_route": true,
+      "strict_route": false,
       "stack": "system",
       "platform": {
         "http_proxy": {
@@ -89,8 +90,10 @@
         "{all}"
       ],
       "url": "http://www.gstatic.com/generate_204",
-      "interval": "10m",
-      "tolerance": 50
+      "interval": "1m",
+      "tolerance": 50,
+      "idle_timeout": "30m",
+      "interrupt_exist_connections": false
     },
     {
       "type": "direct",
